--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "complexauth",
+  "name": "password_reset",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.3",
-    "nodemailer": "^6.7.3"
+    "mongoose": "^5.11.9",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
   }
 }
